// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`displayName generates a default color for the runner jest-runner 1`] = `"yellow"`;

exports[`displayName generates a default color for the runner jest-runner-eslint 1`] = `"magenta"`;

exports[`displayName generates a default color for the runner jest-runner-tsc 1`] = `"red"`;

exports[`displayName generates a default color for the runner jest-runner-tslint 1`] = `"green"`;

exports[`displayName generates a default color for the runner undefined 1`] = `"white"`;

exports[`displayName should throw an error when displayName is is an empty object 1`] = `
"● Validation Error:

  Option "displayName" must be of type:

  {
    name: string;
    color: string;
  }


  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`displayName should throw an error when displayName is missing color 1`] = `
"● Validation Error:

  Option "displayName" must be of type:

  {
    name: string;
    color: string;
  }


  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`displayName should throw an error when displayName is missing name 1`] = `
"● Validation Error:

  Option "displayName" must be of type:

  {
    name: string;
    color: string;
  }


  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`displayName should throw an error when displayName is using invalid values 1`] = `
"● Validation Error:

  Option "displayName" must be of type:

  {
    name: string;
    color: string;
  }


  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`extensionsToTreatAsEsm should enforce leading dots 1`] = `
"● Validation Error:

  Option: extensionsToTreatAsEsm: ['ts'] includes a string that does not start with a period (.).
  Please change your configuration to extensionsToTreatAsEsm: ['.ts'].

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`extensionsToTreatAsEsm throws on .cjs 1`] = `
"● Validation Error:

  Option: extensionsToTreatAsEsm: ['.cjs'] includes '.cjs' which is always treated as CommonJS.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`extensionsToTreatAsEsm throws on .js 1`] = `
"● Validation Error:

  Option: extensionsToTreatAsEsm: ['.js'] includes '.js' which is always inferred based on type in its nearest package.json.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`extensionsToTreatAsEsm throws on .mjs 1`] = `
"● Validation Error:

  Option: extensionsToTreatAsEsm: ['.mjs'] includes '.mjs' which is always treated as an ECMAScript Module.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`logs a deprecation warning when 'browser' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "● Deprecation Warning:

  Option "browser" has been deprecated. Please install "browser-resolve" and use the "resolver" option in Jest configuration as shown in the documentation: https://jestjs.io/docs/configuration#resolver-string

  Configuration Documentation:
  https://jestjs.io/docs/configuration
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'collectCoverageOnlyFrom' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "● Deprecation Warning:

  Option "collectCoverageOnlyFrom" was replaced by "collectCoverageFrom".

    Please update your configuration.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'extraGlobals' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "● Deprecation Warning:

  Option "extraGlobals" was replaced by "sandboxInjectedGlobals".

  Please update your configuration.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'moduleLoader' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "● Deprecation Warning:

  Option "moduleLoader" was replaced by "runtime".

  Please update your configuration.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'preprocessorIgnorePatterns' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "● Deprecation Warning:

  Option "preprocessorIgnorePatterns" was replaced by "transformIgnorePatterns", which support multiple preprocessors.

  Please update your configuration.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'scriptPreprocessor' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "● Deprecation Warning:

  Option "scriptPreprocessor" was replaced by "transform", which support multiple preprocessors.

  Please update your configuration.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'setupTestFrameworkScriptFile' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "● Deprecation Warning:

  Option "setupTestFrameworkScriptFile" was replaced by configuration "setupFilesAfterEnv", which supports multiple paths.

  Please update your configuration.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'testPathDirs' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "● Deprecation Warning:

  Option "testPathDirs" was replaced by "roots".

  Please update your configuration.
  

  Configuration Documentation:
  https://jestjs.io/docs/configuration
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'testURL' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "● Deprecation Warning:

  Option "testURL" was replaced by passing the URL via "testEnvironmentOptions.url".

  Please update your configuration.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'timers' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "● Deprecation Warning:

  Option "timers" was replaced by "fakeTimers".

  Please update your configuration.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`preset throws when module was found but no "jest-preset.js" or "jest-preset.json" files 1`] = `
"● Validation Error:

  Module exist-but-no-jest-preset should have "jest-preset.js" or "jest-preset.json" file at the root.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`preset throws when preset not found 1`] = `
"● Validation Error:

  Preset doesnt-exist not found relative to rootDir /root/path/foo.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`reporters throws an error if first value in the tuple is not a string 1`] = `
"● Reporter Validation Error:

  Unexpected value for Path at index 0 of reporter at index 0
  Expected:
    string
  Got:
    number
  Reporter configuration:
    [
      123
    ]

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`reporters throws an error if second value in the tuple is not an object 1`] = `
"● Reporter Validation Error:

  Unexpected value for Reporter Configuration at index 1 of reporter at index 0
  Expected:
    object
  Got:
    boolean
  Reporter configuration:
    [
      "some-reporter",
      true
    ]

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`reporters throws an error if second value is missing in the tuple 1`] = `
"● Reporter Validation Error:

  Unexpected value for Reporter Configuration at index 1 of reporter at index 0
  Expected:
    object
  Got:
    undefined
  Reporter configuration:
    [
      "some-reporter"
    ]

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`reporters throws an error if value is neither string nor array 1`] = `
"● Reporter Validation Error:

  Reporter at index 0 must be of type:
    array or string
  but instead received:
    number

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`rootDir throws if the options is missing a rootDir property 1`] = `
"● Validation Error:

  Configuration option rootDir must be specified.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`runner throw error when a runner is not found 1`] = `
"● Validation Error:

  Jest Runner missing-runner cannot be found. Make sure the runner configuration option points to an existing node module.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`testEnvironment throws on invalid environment names 1`] = `
"● Validation Error:

  Test environment phantom cannot be found. Make sure the testEnvironment configuration option points to an existing node module.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`testMatch throws if testRegex and testMatch are both specified 1`] = `
"● Validation Error:

  Configuration options testMatch and testRegex cannot be used together.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`testPathPatterns <regexForTestFiles> ignores invalid regular expressions and logs a warning 1`] = `"  Invalid testPattern a( supplied. Running all tests instead."`;

exports[`testPathPatterns --testPathPatterns ignores invalid regular expressions and logs a warning 1`] = `"  Invalid testPattern a( supplied. Running all tests instead."`;

exports[`testTimeout should throw an error if timeout is a negative number 1`] = `
"● Validation Error:

  Option "testTimeout" must be a natural number.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;

exports[`watchPlugins throw error when a watch plugin is not found 1`] = `
"● Validation Error:

  Watch plugin missing-plugin cannot be found. Make sure the watchPlugins configuration option points to an existing node module.

  Configuration Documentation:
  https://jestjs.io/docs/configuration
"
`;
